all TODO solved